sdk/ruby/lib/weaveffi.rb

# Generated by WeaveFFI 0.4.0 from image.yml
# DO NOT EDIT — your changes will be overwritten.
# To regenerate: weaveffi generate image.yml -o <out>

# frozen_string_literal: true
# WeaveImage Ruby FFI bindings (auto-generated)

require 'ffi'

module WeaveImage
  extend FFI::Library

  case FFI::Platform::OS
  when /darwin/
    ffi_lib 'libweaveffi.dylib'
  when /mswin|mingw/
    ffi_lib 'weaveffi.dll'
  else
    ffi_lib 'libweaveffi.so'
  end

  class ErrorStruct < FFI::Struct
    layout :code, :int32,
           :message, :pointer
  end

  class Error < StandardError
    attr_reader :code

    def initialize(code, message)
      @code = code
      super(message)
    end
  end

  attach_function :weaveffi_error_clear, [:pointer], :void
  attach_function :weaveffi_free_string, [:pointer], :void
  attach_function :weaveffi_free_bytes, [:pointer, :size_t], :void

  def self.check_error!(err)
    return if err[:code].zero?
    code = err[:code]
    msg_ptr = err[:message]
    msg = msg_ptr.null? ? '' : msg_ptr.read_string
    weaveffi_error_clear(err.to_ptr)
    raise Error.new(code, msg)
  end

  # === Module: image ===

  # Encoded image container.
  module ImageFormat
    PNG = 0
    JPEG = 1
    WEBP = 2
    GIF = 3
  end

  # Operation discriminator. See Operation for which fields each kind requires.
  module OpKind
    RESIZE = 0
    CROP = 1
    ROTATE = 2
    BLUR = 3
    GRAYSCALE = 4
  end

  attach_function :weaveffi_image_Operation_destroy, [:pointer], :void
  attach_function :weaveffi_image_Operation_get_kind, [:pointer], :int32
  attach_function :weaveffi_image_Operation_get_width, [:pointer], :pointer
  attach_function :weaveffi_image_Operation_get_height, [:pointer], :pointer
  attach_function :weaveffi_image_Operation_get_x, [:pointer], :pointer
  attach_function :weaveffi_image_Operation_get_y, [:pointer], :pointer
  attach_function :weaveffi_image_Operation_get_degrees, [:pointer], :pointer
  attach_function :weaveffi_image_Operation_get_sigma, [:pointer], :pointer

  attach_function :weaveffi_image_ImageInfo_destroy, [:pointer], :void
  attach_function :weaveffi_image_ImageInfo_get_width, [:pointer], :uint32
  attach_function :weaveffi_image_ImageInfo_get_height, [:pointer], :uint32
  attach_function :weaveffi_image_ImageInfo_get_format, [:pointer], :int32
  # Build a Resize operation.
  attach_function :weaveffi_image_resize, [:uint32, :uint32, :pointer], :pointer
  # Build a Crop operation (x,y is the top-left corner).
  attach_function :weaveffi_image_crop, [:uint32, :uint32, :uint32, :uint32, :pointer], :pointer
  # Build a Rotate operation (degrees clockwise).
  attach_function :weaveffi_image_rotate, [:double, :pointer], :pointer
  # Build a Gaussian Blur operation (sigma in pixels).
  attach_function :weaveffi_image_blur, [:double, :pointer], :pointer
  # Build a Grayscale operation.
  attach_function :weaveffi_image_grayscale, [:pointer], :pointer
  # Apply ops in order, encode in out_format, return bytes.
  attach_function :weaveffi_image_process, [:pointer, :size_t, :pointer, :size_t, :int32, :pointer, :pointer], :pointer
  # Decode the header only and return dimensions plus detected format.
  attach_function :weaveffi_image_probe, [:pointer, :size_t, :pointer], :pointer

  class OperationPtr < FFI::AutoPointer
    def self.release(ptr)
      WeaveImage.weaveffi_image_Operation_destroy(ptr)
    end
  end

  # Single image operation. Build with the resize/crop/rotate/blur/grayscale
  # factory functions; pass a list to process(). Fields used per kind:
  #   Resize    : width, height
  #   Crop      : x, y, width, height
  #   Rotate    : degrees (clockwise, in degrees)
  #   Blur      : sigma   (Gaussian sigma, in pixels)
  #   Grayscale : (none)
  # Unused fields are null.
  class Operation
    attr_reader :handle

    def initialize(handle)
      @handle = OperationPtr.new(handle)
    end

    def self.create(handle)
      new(handle)
    end

    def destroy
      return if @handle.nil?
      @handle.free
      @handle = nil
    end

    def kind
      result = WeaveImage.weaveffi_image_Operation_get_kind(@handle)
      result
    end

    def width
      result = WeaveImage.weaveffi_image_Operation_get_width(@handle)
      return nil if result.null?
      result.read_uint32
    end

    def height
      result = WeaveImage.weaveffi_image_Operation_get_height(@handle)
      return nil if result.null?
      result.read_uint32
    end

    def x
      result = WeaveImage.weaveffi_image_Operation_get_x(@handle)
      return nil if result.null?
      result.read_uint32
    end

    def y
      result = WeaveImage.weaveffi_image_Operation_get_y(@handle)
      return nil if result.null?
      result.read_uint32
    end

    def degrees
      result = WeaveImage.weaveffi_image_Operation_get_degrees(@handle)
      return nil if result.null?
      result.read_double
    end

    def sigma
      result = WeaveImage.weaveffi_image_Operation_get_sigma(@handle)
      return nil if result.null?
      result.read_double
    end
  end

  class ImageInfoPtr < FFI::AutoPointer
    def self.release(ptr)
      WeaveImage.weaveffi_image_ImageInfo_destroy(ptr)
    end
  end

  # Decoded image header information.
  class ImageInfo
    attr_reader :handle

    def initialize(handle)
      @handle = ImageInfoPtr.new(handle)
    end

    def self.create(handle)
      new(handle)
    end

    def destroy
      return if @handle.nil?
      @handle.free
      @handle = nil
    end

    def width
      result = WeaveImage.weaveffi_image_ImageInfo_get_width(@handle)
      result
    end

    def height
      result = WeaveImage.weaveffi_image_ImageInfo_get_height(@handle)
      result
    end

    def format
      result = WeaveImage.weaveffi_image_ImageInfo_get_format(@handle)
      result
    end
  end

  # Build a Resize operation.
  def self.resize(width, height)
    err = ErrorStruct.new
    result = weaveffi_image_resize(width, height, err)
    check_error!(err)
    raise Error.new(-1, 'null pointer') if result.null?
    Operation.new(result)
  end

  # Build a Crop operation (x,y is the top-left corner).
  def self.crop(x, y, width, height)
    err = ErrorStruct.new
    result = weaveffi_image_crop(x, y, width, height, err)
    check_error!(err)
    raise Error.new(-1, 'null pointer') if result.null?
    Operation.new(result)
  end

  # Build a Rotate operation (degrees clockwise).
  def self.rotate(degrees)
    err = ErrorStruct.new
    result = weaveffi_image_rotate(degrees, err)
    check_error!(err)
    raise Error.new(-1, 'null pointer') if result.null?
    Operation.new(result)
  end

  # Build a Gaussian Blur operation (sigma in pixels).
  def self.blur(sigma)
    err = ErrorStruct.new
    result = weaveffi_image_blur(sigma, err)
    check_error!(err)
    raise Error.new(-1, 'null pointer') if result.null?
    Operation.new(result)
  end

  # Build a Grayscale operation.
  def self.grayscale()
    err = ErrorStruct.new
    result = weaveffi_image_grayscale(err)
    check_error!(err)
    raise Error.new(-1, 'null pointer') if result.null?
    Operation.new(result)
  end

  # Apply ops in order, encode in out_format, return bytes.
  def self.process(input, ops, out_format)
    err = ErrorStruct.new
    input_buf = FFI::MemoryPointer.new(:uint8, input.bytesize)
    input_buf.put_bytes(0, input)
    ops_buf = FFI::MemoryPointer.new(:pointer, ops.length)
    ops_buf.write_array_of_pointer(ops.map(&:handle))
    out_len = FFI::MemoryPointer.new(:size_t)
    result = weaveffi_image_process(input_buf, input.bytesize, ops_buf, ops.length, out_format, out_len, err)
    check_error!(err)
    return ''.b if result.null?
    len = out_len.read(:size_t)
    data = result.read_string(len)
    weaveffi_free_bytes(result, len)
    data
  end

  # Decode the header only and return dimensions plus detected format.
  def self.probe(input)
    err = ErrorStruct.new
    input_buf = FFI::MemoryPointer.new(:uint8, input.bytesize)
    input_buf.put_bytes(0, input)
    result = weaveffi_image_probe(input_buf, input.bytesize, err)
    check_error!(err)
    raise Error.new(-1, 'null pointer') if result.null?
    ImageInfo.new(result)
  end
end

# END weaveffi.rb
